Flex-projeto Finalizado

--- a/Módulo II/flex-projeto/index.html
+++ b/Módulo II/flex-projeto/index.html
@@ -119,8 +119,8 @@
 
     <footer>
         <div class="flex-container footer">
-            <p>&copy; 2021 CSS Flexbox</p>
-            <p>Desenvolvido por: Karen Santos</p>
+            <p>&copy; 2022 CSS Flexbox Santander Full Stack</p>
+            <p>Desenvolvido por: Rafael Oliveira</p>
         </div>
     </footer>
 </body>
