--- a/Módulo II/JS/basic/contador/index.html
+++ b/Módulo II/JS/basic/contador/index.html
@@ -14,6 +14,7 @@
         <span id="currentNumber">0</span>
         <button name="adicionar" onclick="increment()">+</button>
     </div>
+    <button name="limpar" id="limpa" onclick="clean()">limpar</button>
     <script src="assets/scripts.js"></script>
 </body>
 </html>
